# cute

./: .gitignore  CMakeLists.txt  README.md
assets/shader/precompute_lighting/: fs_cube.glsl  fs_ibl_diffuse.glsl  fs_ibl_specular.glsl
source/: main.cpp  math.cpp  other.cpp  other.h
source/core/debug/: log.h
source/core/math/: common.cpp  common.h  mat2.h  mat3.h  mat4.cpp  mat4.h  quat.cpp  quat.h  vec3.cpp
source/core/parsers/: json.h
source/core/string/: hash.cpp  hash.h  hashed_string.cpp  hashed_string.h  string.cpp  string.h
source/cute/: main.cpp
source/cute/animation/: animation.cpp  animation.h  animation_channel.cpp  animation_channel.h  animation_channel_target.cpp  animation_channel_target.h  animation_sampler.cpp  animation_sampler.h
source/cute/audio/: audio_engine.cpp  audio_engine.h  sound.cpp  sound.h
source/cute/device/: app.cpp  app.h  cursor.h  desktop_app.cpp  desktop_app.h  desktop_window.cpp  desktop_window.h  window.cpp  window.h
source/cute/editor/: console_window.cpp  console_window.h  editor.cpp  editor.h  editor_gui.cpp  editor_gui.h  editor_overlay_fps.cpp  editor_overlay_fps.h  editor_window.h  stat_window.cpp  stat_window.h  status_window.cpp  status_window.h
source/cute/physics/: box_shape.cpp  box_shape.h  collider.cpp  collider.h  convex_hull_shape.cpp  convex_hull_shape.h  geometry.h  (+16 more)
source/device/: app.h  key.cpp  key.h  window.h
source/interface_devices/: app.cpp  cursor.h  key.cpp  key.h  window.cpp
source/platform/: engine_config.cpp  engine_config.h  file_system.h  platform_detection.h  timer.cpp  timer.h
(+236 files in other folders)
